[tool.poetry]
name = "asn-lookup"
version = "0.1.0"
description = ""
authors = ["Richard Greville <richard.greville@opticoreit.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipinfo = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
